Создано с помощью Colaboratory

--- a/WhatsApp_Explorer.ipynb
+++ b/WhatsApp_Explorer.ipynb
@@ -303,6 +303,12 @@
         "    else:\n",
         "        return False\n",
         "\n",
+        "def try_join(l):\n",
+        "    try:\n",
+        "        return ','.join(map(str, l))\n",
+        "    except TypeError:\n",
+        "        return np.nan\n",
+        "\n",
         "def getDatapoint(line):\n",
         "    splitline = line.split(' - ')\n",
         "    dateTime = splitline[0]\n",
